--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
     "nodemailer": "^6.9.13",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "tmp-promise": "^3.0.3"
   }
 }
