--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
+    "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "jwt-decode": "^4.0.0",
+    "monaco-editor": "^0.47.0",
     "react": "^18.2.0",
+    "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.1",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
+    "redux": "^5.0.1",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
