--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,9 +1,15 @@
 {
   "version": 2,
+  "build": [
+    {
+      "src": "*.js",
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/server.js"
+      "dest": "/"
     }
   ]
 }
