--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,8 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
-  "proxy": "https://lets-code-new-back.vercel.app",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
@@ -12,16 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2",
-    "child_process": "^1.0.2",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
-    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^4.0.0",
-    "mongoose": "^8.3.2",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.3.1",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "tmp-promise": "^3.0.3"
-  },
-  "description": ""
+  }
 }
