--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,8 +3,8 @@
   "builds": [{ "src": "*.js", "use": "@vercel/node" }],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api"
+      "src": "/(.*)",
+      "dest": "/"
     }
   ]
 }
