--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,16 +1,4 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "app.js",
-      "use": "@vercel/node",
-      "config": { "includeFiles": ["dist/**"] }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "app.js"
-    }
-  ]
+  "routes": [{ "src": "/api/(.*)", "dest": "/app.js" }]
 }
