--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,4 +1,15 @@
 {
   "version": 2,
-  "routes": [{ "src": "/api/(.*)", "dest": "/app.js" }]
+  "builds": [
+    {
+      "src": "./app.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
+  ]
 }
