--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,7 +1,16 @@
 {
   "version": 2,
+  "builds": [
+    {
+      "src": "./index.js",
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [
-    { "handle": "filesystem" },
-    { "src": "/api/.*", "dest": "/app.js" }
-  ]
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
+  ],
+  "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
 }
