--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -7,7 +7,7 @@
     }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "app.js" },
-    { "src": "/(.*)", "dest": "/" }
+    { "src": "/api/(.*)", "dest": "./index.js" },
+    { "src": "/(.*)", "dest": "./" }
   ]
 }
