--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,8 +1,9 @@
 {
-  "rewrites": [
+  "routes": [
     {
-      "source": "/api/(.*)",
-      "destination": "api"
+      "src": "/api/(.*)",
+      "dest": "https://lets-code-new-back.vercel.app/api/$1",
+      "methods": ["GET", "POST", "PUT", "DELETE"]
     }
   ]
 }
