--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,8 +2,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "https://lets-code-new-back.vercel.app/api/$1",
-      "methods": ["GET", "POST", "PUT", "DELETE"]
+      "dest": "https://lets-code-new-back.vercel.app/api/"
     }
   ]
 }
