--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,7 +2,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "https://lets-code-new-back.vercel.app/api/"
+      "dest": "https://lets-code-new-back.vercel.app/api/*"
     }
   ]
 }
