--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@monaco-editor/react": "^4.6.0",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "jwt-decode": "^4.0.0",
     "monaco-editor": "^0.47.0",
     "react": "^18.2.0",
