--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,9 +1,7 @@
 {
   "version": 2,
-  "builds": [{ "src": "index.js", "use": "@now/node" }],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/index.js" },
-    { "handle": "filesystem" },
-    { "src": "/(.*)", "dest": "/index.js" }
+    { "src": "/api/(.*)", "dest": "index.js" },
+    { "src": "/(.*)", "dest": "index.js" }
   ]
 }
