--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.3.1",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
+    "socket.io": "^4.7.5",
     "tmp-promise": "^3.0.3"
   }
 }
