--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,6 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -23,5 +22,6 @@
     "nodemon": "^3.1.0",
     "socket.io": "^4.7.5",
     "tmp-promise": "^3.0.3"
-  }
+  },
+  "description": ""
 }
